crates/obzenflow_adapters/tests/ui/breaker_builder/raw_materialized_attachment_not_extractable.rs
// SPDX-License-Identifier: MIT OR Apache-2.0
// SPDX-FileCopyrightText: 2025-2026 ObzenFlow Contributors
// https://obzenflow.dev

use obzenflow_adapters::middleware::MiddlewareSurfaceAttachment;

fn launder_payload(attachment: MiddlewareSurfaceAttachment) {
    let _policy = attachment.into_effect();
}

fn main() {}
